--- a/td/TD-CORRIGE.tex
+++ b/td/TD-CORRIGE.tex
@@ -101,7 +101,8 @@
 
 \title{\huge{\textbf {Correction TD} \\UDEV et SYSFS : Ecriture de règles et administration}}
 \date{Lundi 25 novembre 2019}
-\author{CAUMES Clément - DEBROUASSE Kevin - HEQUET Jonathan - MERIMI MTALSI Mehdi}
+\author{CAUMES Clément - DEBROUASSE Kevin - HEQUET Jonathan - MERIMI MTALSI Mehdi \\ \url{https://www.github.com/Heisenberk/udev-sysfs}}
+
 
 \begin{document}
 
@@ -138,7 +139,7 @@
 	de créer des règles qui vont s'appliquer en fonction des attributs des périphériques. \newpage
 	
 	
-	\item Effectuer la commande "sudo /sbin/blkid -o udev -p /dev/sdb1".
+	\item Effectuer la commande "sudo /sbin/blkid -o udev -p /dev/sdb1" (Aide pour la compréhension : \url{http://manpages.ubuntu.com/manpages/trusty/fr/man8/blkid.8.html}).
 	
 	\lstinputlisting[caption={/sbin/blkid}, language=SH]{./reponses/q1d} \bigskip
 	
