--- a/td/TD_ENONCE.tex
+++ b/td/TD_ENONCE.tex
@@ -117,7 +117,7 @@
 	\item Faire la commande "df -h" et retrouver avec le système de fichiers associé à la clé USB. 
 	Parcourir le dossier /sys/block/sd[a-z] en fonction de ce que vous avez trouvé à la question précédente. Que remarquez-vous?
 	
-	\item Effectuer la commande "sudo /sbin/blkid -o udev -p /dev/sdb1". 
+	\item Effectuer la commande "sudo /sbin/blkid -o udev -p /dev/sdb1" (Aide pour la compréhension : \url{http://manpages.ubuntu.com/manpages/trusty/fr/man8/blkid.8.html}).
 	
 \end{enumerate}
 
