--- a/cm/diapo.tex
+++ b/cm/diapo.tex
@@ -13,6 +13,20 @@
   \begin{frame}
   \titlepage
   \end{frame}
+  
+   \begin{frame}
+	udev, sysfs : présentation du fonctionnement général le plus simplement possible et exploitation pour l'administration et la compréhension des messages associés dans les log's.
+	\begin{itemize}
+		\setbeamertemplate{itemize item}[circle]
+		\item Préambule et définitions des bases
+		\item Historique avant udev
+		\item Définitions précise de udev et sysfs
+		\item Ecriture de règles udev
+		\item Exploitation pour l'administration
+	\end{itemize}
+
+
+\end{frame}
 
 \section{Définitions}
 
